Overflow and footer fix

--- a/shopping-app/src/styles/components/page--register-login.scss
+++ b/shopping-app/src/styles/components/page--register-login.scss
@@ -14,6 +14,7 @@
     height: 100%;
     position: relative;
     z-index: -9999;
+    overflow: hidden;
 
     @include md {
       display: flex;
